methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:1: error: Missing closing brace `}' assumed here
override def run() {def faireMotif() {override def run() {def faireV() 
^PictureMono2:1: error: expected start of definition
override def run() {def faireMotif() {override def run() {def faireV() 
         ^